// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState default 1`] = `
<div
  class="css-1b4ui7p"
  data-cy="emptyState"
>
  <div
    class="css-1whabpp"
    data-cy="card"
  >
    <div
      class="css-yy1d4r"
    >
      <div
        class="css-1c71uxj"
        data-cy="spacingBox"
      >
        <h2
          class="rmMargins css-1rl5bwh"
          data-cy="headingText2"
        >
          Heading
        </h2>
      </div>
      <div
        class="css-dbyz3d"
        data-cy="spacingBox"
      >
        Body content
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState renders with primary and secondary actions 1`] = `
<div
  class="css-1b4ui7p"
  data-cy="emptyState"
>
  <div
    class="css-1whabpp"
    data-cy="card"
  >
    <div
      class="css-yy1d4r"
    >
      <div
        class="css-1c71uxj"
        data-cy="spacingBox"
      >
        <h2
          class="rmMargins css-1rl5bwh"
          data-cy="headingText2"
        >
          Heading
        </h2>
      </div>
      <div
        class="css-1tq4izn"
        data-cy="spacingBox"
      >
        Body content
      </div>
      <div
        class="css-1m9h7kz"
        data-cy="flex"
      >
        <div
          class="css-149ndna"
          data-cy="flexItem"
        >
          <button
            class="css-8g34zf"
            data-cy="secondaryButton"
            tabindex="0"
            type="button"
          >
            <span
              class=""
            >
              Secondary
            </span>
          </button>
        </div>
        <div
          class="css-149ndna"
          data-cy="flexItem"
        >
          <button
            class="css-1jip74i"
            data-cy="primaryButton"
            tabindex="0"
            type="button"
          >
            <span
              class=""
            >
              Primary
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
